test/expected/declare_rgf_v.out
declare f as register function returning void
                      ^
23: syntax error: "function": "as" expected
